prevent wrap for catalog sidebar headers

--- a/assets/style.css
+++ b/assets/style.css
@@ -330,6 +330,7 @@ pre {
   font-size: 1.5em;
   padding: 10px;
   margin: 0;
+  white-space: nowrap;
 }
 
 .catalog-sidebar ul {
